<resources>
    <string name="app_name">Lab3</string>
    <string name="action_settings">Settings</string>
    <string name="StartingValue">0</string>
    <string name="_9">9</string>
    <string name="minusbuttonname">-</string>
    <string name="plusname">+</string>
    <string name="twoname">2</string>
    <string name="sixname">6</string>
    <string name="threename">3</string>
    <string name="percentname">%</string>
    <string name="fivename">5</string>
    <string name="onename">1</string>
    <string name="fourname">4</string>
    <string name="multiplyname">×</string>
    <string name="plusminusname">±</string>
    <string name="zeroname">0</string>
    <string name="decimalname">.</string>
    <string name="dividename">÷</string>
    <string name="equalsname">=</string>
    <string name="sevenname">7</string>
    <string name="eightname">8</string>
    <string name="squarerootname">√</string>
    <string name="cancelname">C</string>
</resources>
