<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/LeftConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RightConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TopConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <TextView
        android:id="@+id/NumBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/StartingValue"
        android:gravity="right"
        android:textSize="25dp"

        app:layout_constraintEnd_toStartOf="@+id/RightConstraint"
        app:layout_constraintStart_toStartOf="@+id/LeftConstraint"
        app:layout_constraintTop_toTopOf="@+id/TopConstraint" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btnsqrt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/NumBox" />

    <Button
        android:id="@+id/btnsqrt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="squareRoot"
        android:text="@string/squarerootname"
        app:layout_constraintBottom_toTopOf="@+id/btnplus"
        app:layout_constraintEnd_toStartOf="@+id/btnc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/NumBox" />

    <Button
        android:id="@+id/btnc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="clear"
        android:text="@string/cancelname"
        app:layout_constraintBottom_toTopOf="@+id/btnpercent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightConstraint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnsqrt"
        app:layout_constraintTop_toBottomOf="@+id/NumBox" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/eightname"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/NumBox" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/sevenname"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/LeftConstraint"
        app:layout_constraintTop_toBottomOf="@+id/NumBox" />

    <Button
        android:id="@+id/btnequals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="calculationPressed"
        android:text="@string/equalsname"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightConstraint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btndivision"
        app:layout_constraintTop_toBottomOf="@+id/btnminus" />

    <Button
        android:id="@+id/btnminus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="calculationPressed"
        android:text="@string/minusbuttonname"
        app:layout_constraintBottom_toTopOf="@+id/btnequals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightConstraint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnx"
        app:layout_constraintTop_toBottomOf="@+id/btnpercent" />

    <Button
        android:id="@+id/btndecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/decimalname"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/btndivision"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/btnplus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="calculationPressed"
        android:text="@string/plusname"
        app:layout_constraintBottom_toTopOf="@+id/btnx"
        app:layout_constraintEnd_toStartOf="@+id/btnpercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnsqrt" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/twoname"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/zeroname"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/btndecimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnplusminus"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/sixname"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toStartOf="@+id/btnplus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/button21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/threename"
        app:layout_constraintBottom_toTopOf="@+id/btndecimal"
        app:layout_constraintEnd_toStartOf="@+id/btnx"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btnpercent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="calculationPressed"
        android:text="@string/percentname"
        app:layout_constraintBottom_toTopOf="@+id/btnminus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightConstraint"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnplus"
        app:layout_constraintTop_toBottomOf="@+id/btnc" />

    <Button
        android:id="@+id/btnplusminus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="plusMinusPressed"
        android:text="@string/plusminusname"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/LeftConstraint"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/fivename"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/onename"
        app:layout_constraintBottom_toTopOf="@+id/btnplusminus"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/LeftConstraint"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="numPressed"
        android:text="@string/fourname"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/LeftConstraint"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btndivision"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="calculationPressed"
        android:text="@string/dividename"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/btnequals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btndecimal"
        app:layout_constraintTop_toBottomOf="@+id/btnx" />

    <Button
        android:id="@+id/btnx"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="calculationPressed"
        android:text="@string/multiplyname"
        app:layout_constraintBottom_toTopOf="@+id/btndivision"
        app:layout_constraintEnd_toStartOf="@+id/btnminus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/btnplus" />

</androidx.constraintlayout.widget.ConstraintLayout>